Fix popper placement and improve styling
Add scrollbars when overflowing and a max-height

Fixes #35

--- a/shared/src/scss/_suggest-list.scss
+++ b/shared/src/scss/_suggest-list.scss
@@ -3,6 +3,9 @@
   border: 1px solid #eceeef;
   background-color: #fff;
   box-shadow: 0px 3px 3px rgb(234, 222, 222);
+  min-height: 1px;
+  max-height: 50vh;
+  overflow-y: auto;
 
   &-item {
     display: block;
